# korea-stock-insight-mcp

./: .env.example  .gitignore  LICENSE  README.md  SPEC.md  dart.py  krx.py  pyproject.toml  server.json  server.py  test_smoke.py
scripts/: daily_stats.py
