[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "korea-stock-insight-mcp"
version = "0.1.3"
description = "MCP server for Korean stock market analysis (DART disclosures + KRX prices). English-first, drop-in for Claude Desktop / Cursor."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "yjhann33" },
]
keywords = ["mcp", "korea", "stock", "dart", "krx", "kospi", "kosdaq", "finance", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp>=1.27.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "yfinance>=0.2",
]

[project.urls]
Homepage = "https://github.com/yjhann33-design/korea-stock-insight-mcp"
Repository = "https://github.com/yjhann33-design/korea-stock-insight-mcp"
Issues = "https://github.com/yjhann33-design/korea-stock-insight-mcp/issues"

[project.scripts]
korea-stock-insight-mcp = "server:main"

[tool.hatch.build.targets.wheel]
# 단일 파일들이라 packages 대신 명시
include = ["server.py", "dart.py", "krx.py"]

[tool.hatch.build.targets.sdist]
include = ["server.py", "dart.py", "krx.py", "README.md", "LICENSE", "pyproject.toml"]
